--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
     // https://mvnrepository.com/artifact/com.squareup.retrofit2/converter-jackson
     implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
+    // https://mvnrepository.com/artifact/com.squareup.retrofit2/converter-gson
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
 
 }
 
